--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />   
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+
     <title>Login</title>
 </head>
 <body>
@@ -27,10 +28,10 @@
                     <div class="campo">   
                         <i class="material-icons">vpn_key</i>               
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
-                        <label for="isenha">Senha</label>
+                        <label for="isenha" style="font-size: 0.97em;">Senha</label>
                     </div>
                     <input type="submit" value="entrar">
-                    <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
